# qaray

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makezip.sh
assets/: SciFi_Fighter_MK6.mtl  Thumbs.db  banana.mtl  wooddoll.mtl
cmake/: FindTBB.cmake  common.cmake  configcxx.cmake  glew.cmake  glut.cmake  lodepng.cmake
cmake/config-site/: WUs-MacBook-Air.local.cmake
inputs/: example_project10.xml  example_project10_objects.xml  example_project10_test.xml  example_project11_caustics.xml  example_project11_teapot.xml  example_project12_box.xml  example_project12_caustics.xml  example_project12_caustics_glossy.xml  example_project12_caustics_perfect.xml  example_project12_example.xml  example_project13_example.xml  example_project2_phong.xml  example_project3_box.xml  example_project3_sphere.xml  example_project4.xml  example_project5_high.xml  example_project6.xml  example_project7_checkboard.xml  example_project7_object.xml  example_project9.xml  example_scene_trc.xml  scene.xml  test0.xml  trc_mtl_coffee.xml  trc_mtl_glass.xml  trc_mtl_glossy.xml  trc_scene_coffee.xml  trc_scene_mountain.xml  trc_scene_simple.xml  trc_scene_teapot_in_coffee.xml  trc_scene_test.xml  trc_scene_tower.xml  trc_scene_xmas.xml  trc_solid_teapot.xml
projects/Rebuild/: CMakeLists.txt  common.h  main.cpp  math.cpp  math.h  ray.cpp  ray.h
projects/raypacket/: CMakeLists.txt  README.md  global.cpp  global.h  globalvar.cpp  globalvar.h  lights.cpp  lights.h  main.cpp  materials.cpp  materials.h  objects.cpp  objects.h  scene.cpp  scene.h  setup.h  texture.cpp  texture.h  viewport.cpp  viewport.h  xmlload.cpp  xmlload.h
projects/raypacket/backup/objects/: sphere.cpp  sphere.h
projects/raypacket/common/: camera.cpp  camera.h  item.cpp  item.h  ray.cpp  transform.cpp  transform.h
projects/raypacket/core/: box.cpp  box.h  camera.cpp  camera.h  core.h  hitinfo.h  items.cpp  items.h  light.cpp  light.h  material.h  node.h  object.cpp  object.h  qaray.cpp  qaray.h  ray.cpp  ray.h  sampler.cpp  sampler.h  texture.cpp  texture.h  transform.h
projects/raypacket/fb/: framebuffer.cpp  framebuffer.h  tile.h
projects/raypacket/inputs/: example_box_tri_big.xml  example_box_tri_obj.xml
projects/raypacket/materials/: MtlBlinn_Basic.cpp  MtlBlinn_Basic.h  MtlBlinn_MonteCarloGI.cpp  MtlBlinn_MonteCarloGI.h  MtlBlinn_PathTracing.cpp  MtlBlinn_PathTracing.h  MtlPhong_Basic.cpp  MtlPhong_Basic.h  materials.cpp
projects/raypacket/math/: algebra.cpp  algebra.h  math.cpp  math.h  scalar.cpp  scalar.h  types.h  vec.cpp  vec.h  vector.cpp  vector.h
projects/raypacket/samplers/: Sampler_Marsaglia.cpp  Sampler_Marsaglia.h  Sampler_mt19937.cpp  Sampler_mt19937.h
projects/raypacket/scene/: hitinfo.h  light.h  material.h  node.cpp  node.h  object.h  ray.cpp  ray.h  scene_fwd.h  tile.h
projects/raypacket/tests/: test_math.h  tests.cpp
projects/simdtype/: CMakeLists.txt  README.md  main.cpp
projects/simdtype/math/: algebra.cpp  algebra.h  math.h  scalar.cpp  scalar.h  types.h
src/: CMakeLists.txt  README.md  globalvar.cpp  globalvar.h  lights.cpp  lights.h  main.cpp  materials.h  objects.cpp  scene.cpp  scene.h  viewport.cpp  xmlload.cpp  xmlload.h
src/core/: camera.h  hitinfo.cpp  hitinfo.h  items.h  light.h  material.cpp  material.h  node.cpp  node.h  ray.cpp  renderer.cpp  renderer.h  sampler.cpp  sampler.h  setup.h  transform.cpp
src/exe/: PhotonMapViz.cpp  cyPhotonMap.h  cyTriMesh.h
src/ext/: cyBVH.h  cyPhotonMap.h  cyTriMesh.h
src/fb/: framebuffer.cpp  framebuffer.h
src/gui/: viewport.cpp  viewport.h
src/lights/: lights.cpp  lights.h
src/materials/: MtlBlinn_Basic.cpp  MtlBlinn_Basic.h  MtlBlinn_MonteCarloGI.cpp  MtlBlinn_MonteCarloGI.h  MtlBlinn_PathTracing.cpp  MtlBlinn_PathTracing.h  MtlBlinn_PhotonMap.cpp  MtlBlinn_PhotonMap.h  MtlPhong_Basic.cpp  MtlPhong_Basic.h  materials.cpp  materials.h
src/math/: math.cpp  math.h  scalar.h  vector.cpp  vector.h
src/mesh/: TriBVH.cpp  TriBVH.h  TriMesh.cpp  TriMesh.h
src/objects/: objects.cpp  objects.h
src/parser/: xmlload.cpp
src/renderers/: Renderer_GUI.cpp  Renderer_GUI.h  Renderer_MPI.cpp  Renderer_MPI.h  renderer.cpp  renderer.h
src/renderers/gui/: viewport.cpp  viewport.h
src/samplers/: Sampler_Halton.cpp  Sampler_Halton.h  Sampler_Marsaglia.cpp  Sampler_Marsaglia.h  sampler_selection.cpp  sampler_selection.h
src/scene/: scene.cpp  scene.h
src/tasking/: parallel_for.cpp  parallel_for.h
src/textures/: texture.cpp  texture.h
